adds basic structure for monument search engine

--- a/mysite/polishness/templates/polishness/base.html
+++ b/mysite/polishness/templates/polishness/base.html
@@ -81,6 +81,10 @@
           <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:home' %}">poznajmypolske.pl</a></strong>
       </div>
 
+      <div class="navbar-nav mr-auto">
+          <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Zabytki</a></strong>
+      </div>
+
 
       <div class="navbar-nav ml-auto">
           <strong><a class="navbar-brand m-2 p-2" href="{% url 'polishness:contact' %}">Kontakt</a></strong>
