--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -41,7 +41,7 @@ poznajmypolske.pl
 
 {% block content %}
 
-{% if not monuments %}
+{% if request.method == 'GET' %}
    <div class="home" id="home">
        <br>
        <div class="row m-2">
@@ -77,7 +77,18 @@ poznajmypolske.pl
 
 {% else %}
 
-<h2 class="m-4">Znalezione zabytki:</h2>
+    {% if not monuments %}
+    <div class="row m-2 p-2">
+        <div class="col-6">
+            <div class="error">Niestety, nie znaleziono zabytków.</div><br>
+        </div>
+    </div>
+    {% else %}
+    <div class="row m-2 p-2">
+        <div class="col-4">
+            <div class="success">Znalezione zabytki:</div>
+        </div>
+    </div>
     <div class="row m-2 p-2">
     {% for monument in monuments %}
                      <div class="col-md-3">
@@ -92,7 +103,7 @@ poznajmypolske.pl
     {% endfor %}
     </div>
 
+    {% endif %}
+
 {% endif %}
-
-
 {% endblock %}
