--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -10,11 +10,12 @@ poznajmypolske.pl
    <div class="home" id="home">
        <div class="row m-4">
             <h2 align="left">Cześć! Tu Daniel a to jest moja strona o Polsce.</h2>
+            <h2 align="left">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h2>
        <hr>
    </div>
 
         <div class="row m-4">
-        <img class="card-img-top" src="https://picsum.photos/640/640" alt="Card image cap">
+        <img class="card-img-top" src="{{photo_link}}" alt="Card image cap">
         </div>
 	</div>
 {% endblock %}
