--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -16,7 +16,7 @@ poznajmypolske.pl
 
     .card:hover {
         border-color: #007bff;
-        transform: translateY(-5px);
+        transform: scale(1.1); /* Slightly enlarge the brand */
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
 
@@ -75,7 +75,7 @@ poznajmypolske.pl
             </div>
         </div>
     </form>
-    <small>Wyszukiwarka rozróżnia małe i duże litery.</small>
+    <small>Wyszukiwarka rozróżnia małe i duże litery. Źródłem zabytków jest <a href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych"> Rejestr zabytków nieruchomych</a>.</small>
 
 {% else %}
 
