--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -34,6 +34,9 @@ poznajmypolske.pl
         font-size: 1.25rem;
     }
 
+    .custom-rounded {
+        border-radius: 8px; /* Delikatne zaokrąglenie */
+    }
 
 {% endblock %}
 
@@ -51,31 +54,35 @@ poznajmypolske.pl
        </div>
    </div>
 
+<form action="/monuments/" method="post" class="p-4 border border-dark custom-rounded">
+    {% csrf_token %}
+    <div class="row mb-3">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <input type="text" name="locality" placeholder="...wpisz miejscowość..." class="form-control custom-rounded" autocomplete="off">
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <input type="text" name="parish" placeholder="...wpisz gminę..." class="form-control custom-rounded" autocomplete="off">
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <input type="text" name="county" placeholder="...wpisz powiat..." class="form-control custom-rounded" autocomplete="off">
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <input type="text" name="voivodeship" placeholder="...wpisz województwo..." class="form-control custom-rounded" autocomplete="off">
+        </div>
+    </div>
 
-	<form action="/monuments/" method="post" style="border: 2px solid #000; padding: 20px;">
-        {% csrf_token %}
-        <div class="row m-4">
-        <div class="col-12">
-            <span>
-                <input type="text" name="locality" placeholder="...wpisz miejscowość..." autocomplete="off"/>
-                <input type="text" name="parish" placeholder="...wpisz gminę..." autocomplete="off"/>
-                <input type="text" name="county" placeholder="...wpisz powiat..." autocomplete="off"/>
-                <input type="text" name="voivodeship" placeholder="...wpisz województwo..." autocomplete="off"/>
-            </span>
+    <div class="row mb-3">
+        <div class="col-lg-8 col-md-8 col-sm-12">
+            <label for="quantity" class="form-label">Maksymalna liczba wynikowych wierszy:</label>
+            <input type="number" id="quantity" name="quantity" class="form-control custom-rounded" placeholder="...wpisz liczbę..." value="12" autocomplete="off">
         </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+            <input type="submit" value="Szukaj" class="btn btn-dark btn-lg mt-3 custom-rounded">
         </div>
+    </div>
+</form>
 
-        <div class="row m-4">
-            <div class="col-8">
-                <label for="quantity" style="font-family: Arial, sans-serif; font-size: 22px; color: #333;">Maksymalna liczba wynikowych wierszy:</label>
-                <input type="number" id="quantity" name="quantity" placeholder="...wpisz liczbę..." value="12" autocomplete="off"></label>
-            </div>
-            <div class="col-2">
-                <input type="submit" value="Szukaj" class="btn btn-dark">
-            </div>
-        </div>
-    </form>
-    <small>Wyszukiwarka rozróżnia małe i duże litery. Źródłem zabytków jest <a href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych"> Rejestr zabytków nieruchomych</a>.</small>
+    <small>Wyszukiwarka rozróżnia duże i małe litery. Źródłem zabytków jest <a href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych"> Rejestr zabytków nieruchomych</a>.</small>
 
 {% else %}
 
