--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -81,7 +81,7 @@ poznajmypolske.pl
 
             </div>
             <!-- Button with call-to-action -->
-            <a href="#" class="btn btn-primary btn-lg mt-3" style="font-weight: bold;">Zapytaj sztucznej inteligencji o to miejsce</a>
+            <a href="#" class="btn btn-primary btn-lg mt-3" style="font-weight: bold;">Zapytaj sztucznej inteligencji o to miejsce.</a>
         </div>
     </div>
 </div>
