adds cosmetic styling change

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -9,8 +9,10 @@ poznajmypolske.pl
 
    <div class="home" id="home">
        <div class="row m-4">
-            <h2 align="left">Cześć! Tu Daniel a to jest moja strona o Polsce.</h2>
-            <h2 align="left">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h2>
+            <div class="col">
+                <h2 align="left">Cześć! Tu Daniel a to jest moja strona o Polsce.</h2>
+                <h2 align="left">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h2>
+            </div>
        <hr>
    </div>
 
