adds cosmetic styling change

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -107,6 +107,7 @@
       <div class="navbar-nav mr-auto">
           <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:home' %}">poznajmypolske.pl</a></strong>
           <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Zabytki</a></strong>
+          <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Wycieczki</a></strong>
       </div>
 
 
