adds smaller styling changes

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -16,6 +16,11 @@
 
     <style>
 
+        .container {
+         position: relative;
+        }
+
+
         /* Ustawia wysokość na 100% dla całego dokumentu */
         html, body {
             height: 100%;
