--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -63,16 +63,21 @@ poznajmypolske.pl
     {% else %}
     <div class="row m-2 p-2">
         <div class="col">
-            <div class="success">Znalezione zabytki:</div>
+            <div class="success">Poniżej Twoja wycieczka:</div>
         </div>
     </div>
     <div class="row m-2 p-2">
     {% for monument in monuments %}
-                     <div class="col-md-3">
+                     <div class="col-md-12">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
                                 <h4 class=""><a href="/{{monument.id}}/">{{monument.name}}</a></h4>
+                                {% if monument.street == "nan" %}
+                                    <small>{{monument.locality}}, {{monument.address_number}}</small>
+                                {% else %}
+                                    <small>{{monument.locality}}, {{monument.street}}/{{monument.address_number}}</small>
+                                {% endif%}
                             </div>
                         </div>
                     </div>
