improves trip generation

--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -13,7 +13,7 @@ poznajmypolske.pl
    <div class="home" id="home">
        <br>
        <div class="row m-2">
-            <h2 align="left">Generator wycieczek. W budowie.</h2>
+            <h2 align="left">Generator wycieczek.</h2>
 
        <hr>
        </div>
