updates contact form: polish language

--- a/polishness/templates/polishness/contact.html
+++ b/polishness/templates/polishness/contact.html
@@ -27,7 +27,7 @@ poznajmypolske.pl
 				<form method="post" action="/contact/" class="form-group">
 					{% csrf_token %}
 					{{form|crispy}}
-					<input type="submit" value="Send" class="btn btn-outline-dark btn-lg">
+					<input type="submit" value="Wyślij" class="btn btn-outline-dark btn-lg">
 				</form>
 				</div>
 			</div>
