--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -4,8 +4,18 @@
 poznajmypolske.pl
 {% endblock %}
 
+{% block style %}
+
+
+ .table-hover tbody tr:hover {
+    background-color: yellow;
+}
+
+
+{% endblock %}
 
 {% block content %}
+
 
 <br>
 <div class="row" style="border: 3px solid #000; padding: 20px;">
