adds few changes, specifically for AI integration

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -97,6 +97,11 @@
 	    font-size: 24px;
 	}
 
+
+    .custom-rounded {
+        border-radius: 8px; /* Delikatne zaokrąglenie */
+    }
+
     {% block style %}
     {% endblock %}
     </style>
