adds cosmetic updates around text/styling

--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -57,7 +57,7 @@ poznajmypolske.pl
     {% if not monuments %}
     <div class="row m-2 p-2">
         <div class="col">
-            <div class="error">Niestety, nie znaleziono zabytków.</div><br>
+            <div class="error">Niestety, nie znaleziono zabytków i nie można było wygenerować wycieczki.</div><br>
         </div>
     </div>
     {% else %}
