--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -63,7 +63,7 @@
             <!-- About Section -->
             <div class="col-md-4">
                 <h4>Misja:</h4>
-                <p>Pomoc w podróży, w odkrywaniu Polski!</p>
+                <p>Pomoc w odkrywaniu Polski!</p>
             </div>
 
             <!-- Navigation Links -->
