--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -7,16 +7,17 @@ poznajmypolske.pl
 
 {% block content %}
 
-   <div class="home" id="home">
-       <div class="row m-2">
-            <div class="col">
-                <h2 align="left">Cześć! Tu Daniel a to jest moja strona o Polsce.</h2>
-                <h2 align="left">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h2>
-            </div>
-       <hr>
-   </div>
+<div class="home" id="home">
+    <div class="row m-2">
+        <div class="col-12 col-md-8 col-md-4">
+            <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
+            <h3 class="text-start">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h3>
+        </div>
+    </div>
+    <hr />
+</div>
 
-        <div class="row m-4">
+   <div class="row m-4">
         <img class="card-img-top" src="{{photo_link}}" alt="Card image cap">
         </div>
 	</div>
