--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -42,6 +42,7 @@
         nav .navbar-brand {
             color: #ffffff; /* Default text color */
             padding: 5px 10px; /* Add some padding for hover background */
+            text-decoration: underline;
             position: relative;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
             transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
@@ -49,8 +50,8 @@
 
         nav .navbar-brand:hover {
             color: #ff5733; /* Change text color */
-            background-color: rgba(255, 255, 255, 0.5); /* Add background on hover */
-            transform: scale(1.1); /* Slightly enlarge the brand */
+            background-color: rgba(255, 255, 255, 0.3); /* Add background on hover */
+            transform: scale(1.2); /* Slightly enlarge the brand */
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow */
             border-radius: 8px; /* Dodanie zaokrąglenia podczas hover */
         }
@@ -113,14 +114,16 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
       <div class="navbar-nav mr-auto">
-          <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:home' %}">poznajmypolske.pl</a></strong>
-          <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Zabytki</a></strong>
-          <strong><a class="navbar-brand m-2 p-2 btn-dark" href="{% url 'polishness:trips' %}">Wycieczki</a></strong>
+          <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:home' %}">poznajmypolske.pl</a></strong>
+          <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:history' %}">Historia</a></strong>
+          <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:poland_in_numbers' %}">Polska w liczbach</a></strong>
+          <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Zabytki</a></strong>
+          <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:trips' %}">Wycieczki</a></strong>
       </div>
 
 
       <div class="navbar-nav ml-auto">
-          <strong><a class="navbar-brand m-2 p-2" href="{% url 'polishness:contact' %}">Kontakt</a></strong>
+          <strong><a class="navbar-brand m-3 p-2" href="{% url 'polishness:contact' %}">Kontakt</a></strong>
       </div>
 
   </nav>
