--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -71,6 +71,7 @@
                 <h4>Przydatne linki:</h4>
                 <ul class="list-unstyled">
                     <li><a href="https://www.gov.pl/" class="text-white">Serwis Rzeczypospolitej Polskiej </a></li>
+                    <li><a href="https://stat.gov.pl/" class="text-white">Główny urząd statystyczny</a></li>
                     <li><a href="https://zabytek.pl/pl/" class="text-white">Zabytek.pl</a></li>
                 </ul>
             </div>
