--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -7,7 +7,7 @@ poznajmypolske.pl
 
 {% block content %}
 
-<div class="home" id="home">
+<div id="home">
     <div class="row m-2">
         <div class="col-12 col-md-8 col-md-4">
             <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
@@ -19,6 +19,5 @@ poznajmypolske.pl
 
    <div class="row m-4">
         <img class="card-img-top" src="{{photo_link}}" alt="Card image cap">
-        </div>
-	</div>
+   </div>
 {% endblock %}
