--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -6,18 +6,29 @@ poznajmypolske.pl
 
 
 {% block content %}
-
-<div id="home">
-    <div class="row m-2">
+    <div class="row m-3">
         <div class="col-12 col-md-8 col-md-4">
             <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
-            <h3 class="text-start">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h3>
-        </div>
-    </div>
-    <hr />
-</div>
+                </div>
+            </div>
+            <hr />
 
-   <div class="row m-4">
-        <img class="card-img-top" src="{{photo_link}}" alt="Card image cap">
-   </div>
+
+{% if photo_link %}
+
+       <div class="row m-3">
+           <div class="col-12 col-md-8 col-md-4">
+               <h3 class="text-start">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h3>
+           </div>
+       </div>
+       <hr>
+
+       <div class="row m-3">
+           <div class="col">
+                <img class="card-img-top" src="{{photo_link}}" alt="">
+           </div>
+       </div>
+
+{% endif %}
+
 {% endblock %}
