updates interface for downloading photos

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -6,18 +6,12 @@ poznajmypolske.pl
 
 
 {% block content %}
-    <div class="row m-3">
-        <div class="col-12 col-md-8 col-md-4">
-            <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
-                </div>
-            </div>
-            <hr />
-
 
 {% if photo_link %}
 
        <div class="row m-3">
            <div class="col-12 col-md-8 col-md-4">
+               <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
                <h3 class="text-start">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h3>
            </div>
        </div>
@@ -28,7 +22,17 @@ poznajmypolske.pl
                 <img class="card-img-top" src="{{photo_link}}" alt="">
            </div>
        </div>
+       <strong style="text-align: right; display: block;">{{photo_author}} (unsplash.com)</strong>
+       <br>
 
+
+{% else %}
+    <div class="row m-3">
+        <div class="col-12 col-md-8 col-md-4">
+            <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
+                </div>
+            </div>
+            <hr>
 {% endif %}
 
 {% endblock %}
