adds another stylistic change (photo downloading)

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -19,7 +19,9 @@ poznajmypolske.pl
 
        <div class="row m-3">
            <div class="col">
-                <img class="card-img-top" src="{{photo_link}}" alt="">
+                <a href="{{photo_link}}" download="pobrane_zdjecie.jpg">
+                    <img class="card-img-top" src="{{photo_link}}" alt="Pobierz zdjęcie">
+                </a>
            </div>
        </div>
        <strong style="text-align: right; display: block;">{{photo_author}} (unsplash.com)</strong>
