--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -100,7 +100,7 @@ poznajmypolske.pl
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
-                                <h4 class=""><a href="/{{monument.id}}/">{{monument.name}}</a></h4>
+                                <h4 class=""><a href="/monument/{{monument.id}}/">{{monument.name}}</a></h4>
                             </div>
                         </div>
                     </div>
