--- a/polishness/templates/polishness/poland_in_numbers_field_viewing.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_viewing.html
@@ -7,12 +7,14 @@ poznajmypolske.pl
 
 {% block content %}
 
-    <div class="row m-2 p-2">
-         <div class="col">
-            <h3 class="text-start">Dedykowana wyszukiwarka dla dziedziny/obszaru <strong>'{{field_name}}'</strong>:</h3>
-         </div>
-
+<div id="home">
+    <div class="row m-2">
+        <div class="col-12 col-md-8 col-md-4">
+            <h3 class="text-start">W budowie.</h3>
+        </div>
     </div>
+    <hr />
+</div>
 
 
 {% endblock %}
