--- a/polishness/templates/polishness/poland_in_numbers_fields.html
+++ b/polishness/templates/polishness/poland_in_numbers_fields.html
@@ -24,11 +24,12 @@ poznajmypolske.pl
                     </div>
 
     {% endfor %}
+        <hr>
         {% for field in field_variables %}
                      <div class="col-md-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
                             <div class="card-body">
-                                     <h4 class=""><a href="/poland-in-numbers/{{field.field_variable_id}}/{{field.field_variable_name}}/">{{field.field_variable_name}}</a></h4>
+                                     <h4 class=""><a href="/poland-in-numbers/{{field.field_id}}/{{field.field_variable_id}}/{{field.field_variable_name}}/">{{field.field_variable_name}}</a></h4>
                             </div>
                         </div>
                     </div>
