--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -12,23 +12,22 @@ poznajmypolske.pl
 
 {% block content %}
 
-    <div class="row m-2 p-2">
+    <div class="row p-2">
          <div class="col">
             <h3 class="text-start">Dedykowana przeglądarka dla obszaru <strong>'{{field_variable_name}}'</strong>:</h3>
          </div>
     </div>
     <hr>
+
     <form action="/poland-in-numbers/{{field_id}}/{{field_variable_id}}/{{field_variable_name}}/" method="post" class="p-4 border border-dark custom-rounded form-group">
         {% csrf_token %}
 
-        <div class="input-group mb-3">
-                <label for="przekroj__przekrojid__okresid">Wybierz przekrój/okres:</label>
+                <label for="przekroj__przekrojid__okresid">Wybierz przekrój [okres]:</label>
                  <select class="select-section" id="przekroj__przekrojid__okresid" name="przekroj__przekrojid__okresid">
                 {% for item_section_period in section_periods %}
-                    <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}">{{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]</option>
+                    <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}__{{item_section_period.opis_okres}}">{{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]</option>
                 {% endfor %}
                 </select>
-        </div>
 
         <br>
         <label for="rok">Wybierz rok:</label>
@@ -63,7 +62,6 @@ poznajmypolske.pl
 
         <input type="submit" value="Przeglądaj">
     </form>
-
 
 
 
