--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -72,7 +72,7 @@ poznajmypolske.pl
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
-                                <h4 class=""><a href="/{{monument.id}}/">{{monument.name}}</a></h4>
+                                <h4 class=""><a href="{% url 'polishness:monument_single' monument.id %}">{{monument.name}}</a></h4>
                                 {% if monument.street == "nan" %}
                                     {% if monument.address_number == "nan" %}
                                         <small>{{monument.locality}}</small>
