--- a/polishness/templates/polishness/poland_in_numbers_field_viewing.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_viewing.html
@@ -8,7 +8,7 @@ poznajmypolske.pl
 {% block content %}
 
                 <!-- Title of the Monument -->
-                <h2 class="card-title" style="font-weight: bold;">{{ field_variable_name|capfirst }}</h2>
+                <h1 style="font-weight: bold;" class="p-2">{{ field_variable_name|capfirst }}:</h1>
 
                 <!-- Table with monument details -->
                 <div class="table-responsive">
