--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -62,13 +62,13 @@
         <div class="row">
             <!-- About Section -->
             <div class="col-md-4">
-                <h4>Misja:</h4>
+                <h4 style="font-weight: bold;">Misja:</h4>
                 <p>Pomoc w odkrywaniu Polski!</p>
             </div>
 
             <!-- Navigation Links -->
             <div class="col-md-4">
-                <h4>Przydatne linki:</h4>
+                <h4 style="font-weight: bold;">Przydatne linki:</h4>
                 <ul class="list-unstyled">
                     <li><a href="https://www.gov.pl/" class="text-white">Serwis Rzeczypospolitej Polskiej </a></li>
                     <li><a href="https://stat.gov.pl/" class="text-white">Główny urząd statystyczny</a></li>
@@ -78,7 +78,7 @@
 
             <!-- Social Media Links -->
             <div class="col-md-4">
-                <h4>Inne moje strony:</h4>
+                <h4 style="font-weight: bold;">Inne moje strony:</h4>
                 <a href="https://danielpalacz.pythonanywhere.com/" class="text-white mr-3">
                     <i class="fab"></i> Prywatna
                 </a>
