--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -6,7 +6,7 @@ poznajmypolske.pl
 
 {% block style %}
     .select-section {
-        width: 50%; /* Zajmie 50% dostępnej szerokości */
+        width: 40%; /* Zajmie 20% dostępnej szerokości */
     }
 {% endblock %}
 
@@ -19,49 +19,48 @@ poznajmypolske.pl
     </div>
     <hr>
 
-    <form action="/poland-in-numbers/{{field_id}}/{{field_variable_id}}/{{field_variable_name}}/" method="post" class="p-4 border border-dark custom-rounded form-group">
+    <form action="{% url 'polishness:poland_in_numbers_field_browser' field_id field_variable_id field_variable_name %}" method="post" class="p-4 border border-dark custom-rounded">
+
         {% csrf_token %}
 
-                <label for="przekroj__przekrojid__okresid">Wybierz przekrój [okres]:</label>
-                 <select class="select-section" id="przekroj__przekrojid__okresid" name="przekroj__przekrojid__okresid">
-                {% for item_section_period in section_periods %}
-                    <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}__{{item_section_period.opis_okres}}">{{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]</option>
-                {% endfor %}
-                </select>
+        <div class="row">
+            <!-- Pierwsza kolumna - Przekrój -->
+            <div class="col-12 col-md-6 mb-3">
+                <fieldset class="p-3 border border-dark custom-rounded">
+                    <label for="przekroj__przekrojid__okresid" style="text-decoration: underline;">Przekrój [okres]:</label>
+                    <select class="form-control" id="przekroj__przekrojid__okresid" name="przekroj__przekrojid__okresid" aria-label="Przekrój okres">
+                        <option value="" disabled selected>Wybierz przekrój i okres</option>
+                        {% for item_section_period in section_periods %}
+                            <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}__{{item_section_period.opis_okres}}">
+                                {{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]
+                            </option>
+                        {% endfor %}
+                    </select>
+                </fieldset>
+            </div>
 
-        <br>
-        <label for="rok">Wybierz rok:</label>
-        <select id="rok" name="rok">
-            <option value="2024">2024</option>
-            <option value="2023">2023</option>
-            <option value="2022">2022</option>
-            <option value="2021">2021</option>
-            <option value="2020">2020</option>
-            <option value="2019">2019</option>
-            <option value="2018">2018</option>
-            <option value="2017">2017</option>
-            <option value="2016">2016</option>
-            <option value="2015">2015</option>
-            <option value="2014">2014</option>
-            <option value="2013">2013</option>
-            <option value="2012">2012</option>
-            <option value="2011">2011</option>
-            <option value="2010">2010</option>
-            <option value="2009">2009</option>
-            <option value="2008">2008</option>
-            <option value="2007">2007</option>
-            <option value="2006">2006</option>
-            <option value="2005">2005</option>
-            <option value="2004">2004</option>
-            <option value="2003">2003</option>
-            <option value="2002">2002</option>
-            <option value="2001">2001</option>
-            <option value="2000">2000</option>
-        </select>
-        <br><br>
+            <!-- Druga kolumna - Wybór roku -->
+            <div class="col-12 col-md-6 mb-3">
+                <fieldset class="p-3 border border-dark custom-rounded">
+                    <label for="rok" style="text-decoration: underline;">Wybierz rok:</label>
+                    <select class="form-control" id="rok" name="rok" aria-label="Wybierz rok">
+                        <option value="" disabled selected>Wybierz rok</option>
+                        {% for year in years %}
+                            <option value="{{ year }}">{{ year }}</option>
+                        {% endfor %}
+                    </select>
+                </fieldset>
+            </div>
+        </div>
 
-        <input type="submit" value="Przeglądaj">
+        <!-- Przycisk Submit -->
+        <div class="row">
+            <div class="col-12 text-center">
+                <input type="submit" value="Przeglądaj" class="btn btn-primary px-4 btn-lg">
+            </div>
+        </div>
     </form>
+
 
 
 
