--- a/polishness/templates/polishness/poland_in_numbers_fields.html
+++ b/polishness/templates/polishness/poland_in_numbers_fields.html
@@ -8,7 +8,7 @@ poznajmypolske.pl
 {% block content %}
     <div class="row m-2">
         <div class="col-12 col-md-8 col-md-4">
-            <h3 class="text-start">Wybierz poniżej dziedzinę, która Cię interesuje.</h3>
+            <h3 class="p-2 text-start">Wybierz poniżej obszar, który Cię interesuje.</h3>
         </div>
     </div>
     <hr>
@@ -18,24 +18,25 @@ poznajmypolske.pl
                      <div class="col-md-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
                             <div class="card-body">
-                                     <h4 class=""><a href="/poland-in-numbers/{{field.field_id}}/">{{field.field_name}}</a></h4>
+                                     <h4 class=""><a href="{% url 'polishness:poland_in_numbers_fields' field.field_id %}">{{field.field_name}}</a></h4>
                             </div>
                         </div>
-                    </div>
+    </div>
 
     {% endfor %}
-        <hr>
+        <div class="row m-2 p-2">
         {% for field in field_variables %}
                      <div class="col-md-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
                             <div class="card-body">
-                                     <h4 class=""><a href="/poland-in-numbers/{{field.field_id}}/{{field.field_variable_id}}/{{field.field_variable_name}}/">{{field.field_variable_name}}</a></h4>
+                                     <h4 class=""><a href="{% url 'polishness:poland_in_numbers_field_browser' field.field_id field.field_variable_id field.field_variable_name %}">{{field.field_variable_name}}</a></h4>
                             </div>
                         </div>
                     </div>
 
         {% endfor %}
-    </div>
+        </div>
+        </div>
 
 
 
