--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -23,42 +23,42 @@ poznajmypolske.pl
 
         {% csrf_token %}
 
-        <div class="row">
-            <!-- Pierwsza kolumna - Przekrój -->
-            <div class="col-12 col-md-6 mb-3">
-                <fieldset class="p-3 border border-dark custom-rounded">
-                    <label for="przekroj__przekrojid__okresid" style="text-decoration: underline;">Przekrój [okres]:</label>
-                    <select class="form-control" id="przekroj__przekrojid__okresid" name="przekroj__przekrojid__okresid" aria-label="Przekrój okres">
-                        <option value="" disabled selected>Wybierz przekrój i okres</option>
-                        {% for item_section_period in section_periods %}
-                            <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}__{{item_section_period.opis_okres}}">
-                                {{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]
-                            </option>
-                        {% endfor %}
-                    </select>
-                </fieldset>
-            </div>
-
-            <!-- Druga kolumna - Wybór roku -->
-            <div class="col-12 col-md-6 mb-3">
-                <fieldset class="p-3 border border-dark custom-rounded">
-                    <label for="rok" style="text-decoration: underline;">Wybierz rok:</label>
-                    <select class="form-control" id="rok" name="rok" aria-label="Wybierz rok">
-                        <option value="" disabled selected>Wybierz rok</option>
-                        {% for year in years %}
-                            <option value="{{ year }}">{{ year }}</option>
-                        {% endfor %}
-                    </select>
-                </fieldset>
-            </div>
+    <div class="row">
+        <!-- Pierwsza kolumna - Przekrój -->
+        <div class="col-12 col-md-6 mb-3">
+            <fieldset class="p-3 border border-dark custom-rounded">
+                <label for="przekroj__przekrojid__okresid" style="text-decoration: underline;">Przekrój [okres]:</label>
+                <select class="form-control" id="przekroj__przekrojid__okresid" name="przekroj__przekrojid__okresid" aria-label="Przekrój okres" required title="Proszę wybrać opcję w tym polu.">
+                    <option value="" disabled selected>Wybierz przekrój i okres</option>
+                    {% for item_section_period in section_periods %}
+                        <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}__{{item_section_period.opis_okres}}">
+                            {{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]
+                        </option>
+                    {% endfor %}
+                </select>
+            </fieldset>
         </div>
 
-        <!-- Przycisk Submit -->
-        <div class="row">
-            <div class="col-12 text-center">
-                <input type="submit" value="Przeglądaj" class="btn btn-primary px-4 btn-lg">
-            </div>
+        <!-- Druga kolumna - Wybór roku -->
+        <div class="col-12 col-md-6 mb-3">
+            <fieldset class="p-3 border border-dark custom-rounded">
+                <label for="rok" style="text-decoration: underline;">Wybierz rok:</label>
+                <select class="form-control" id="rok" name="rok" aria-label="Wybierz rok" required title="Proszę wybrać opcję w tym polu.">
+                    <option value="" disabled selected>Wybierz rok</option>
+                    {% for year in years %}
+                        <option value="{{ year }}">{{ year }}</option>
+                    {% endfor %}
+                </select>
+            </fieldset>
         </div>
+    </div>
+
+    <!-- Przycisk Submit -->
+    <div class="row">
+        <div class="col-12 text-center">
+            <input type="submit" value="Przeglądaj" class="btn btn-primary px-4 btn-lg">
+        </div>
+    </div>
     </form>
 
 
