--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -19,7 +19,7 @@ poznajmypolske.pl
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
-                                 <h4 class=""><a href="{% url 'polishness:poland_in_numbers_fields' root_field.field_id %}">{{root_field.field_name}}</a></h4>
+                                 <h4 class=""><a href="{% url 'polishness:poland_in_numbers_fields' root_field.field_id root_field.field_name %}">{{root_field.field_name}}</a></h4>
                             </div>
                         </div>
                     </div>
