--- a/polishness/templates/polishness/poland_in_numbers_fields.html
+++ b/polishness/templates/polishness/poland_in_numbers_fields.html
@@ -18,7 +18,7 @@ poznajmypolske.pl
                      <div class="col-md-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
                             <div class="card-body">
-                                     <h4 class=""><a href="{% url 'polishness:poland_in_numbers_fields' field.field_id %}">{{field.field_name}}</a></h4>
+                                     <h4 class=""><a href="{% url 'polishness:poland_in_numbers_fields' field.field_id field.field_name %}">{{field.field_name}}</a></h4>
                             </div>
                         </div>
     </div>
