--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -17,7 +17,7 @@ poznajmypolske.pl
        </div>
    </div>
 
-<form action="/monuments/" method="post" class="p-4 border border-dark custom-rounded">
+<form action="/monuments/" method="post" class="custom-rounded custom-form">
     {% csrf_token %}
     <div class="row mb-3">
         <div class="col-lg-3 col-md-6 col-sm-12">
