--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -19,7 +19,7 @@ poznajmypolske.pl
        </div>
    </div>
 
-    <form action="/trips/" method="post" class="p-4 border border-dark custom-rounded">
+    <form action="/trips/" method="post" class="custom-rounded custom-form">
         {% csrf_token %}
         <div class="row mb-3">
             <div class="col-lg-3 col-md-6 col-sm-12">
