adds logging extension for DBW API

--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -12,7 +12,7 @@ poznajmypolske.pl
 
 {% block content %}
 
-    <div class="row p-2">
+    <div class="row mt-4">
          <div class="col">
             <h3 class="text-start">Dedykowana przeglądarka dla obszaru <strong>'{{field_variable_name}}'</strong>:</h3>
          </div>
