--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -6,7 +6,7 @@ poznajmypolske.pl
 
 
 {% block content %}
-    <div class="row m-2">
+    <div class="row mt-4">
         <div class="col-12 col-md-8 col-md-4">
             <h3 class="text-start">Wybierz poniżej kategorię, która Cię interesuje.</h3>
         </div>
