adds some smaller styling changes

--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -7,8 +7,13 @@ poznajmypolske.pl
 
 {% block content %}
     <div class="row mt-4">
+        <div class="col">
+            <h4 class="text-start">W tym miejscu przedstawiane są dane z <b><a style="color: black; href="https://api-dbw.stat.gov.pl/apidocs/index.html">API Dziedzinowych Baz Wiedzy</a></b> Głównego Urzędu Statystycznego.  </h4>
+        </div>
+    </div>
+    <div class="row mt-4">
         <div class="col-12 col-md-8 col-md-4">
-            <h3 class="text-start">Wybierz poniżej kategorię, która Cię interesuje.</h3>
+            <h4 class="text-start">Wybierz poniżej kategorię, która Cię interesuje.</h4>
         </div>
     </div>
     <hr>
