--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -10,7 +10,11 @@ poznajmypolske.pl
  .table-hover tbody tr:hover {
     background-color: yellow;
 }
-
+    .card:hover {
+        border-color: #007bff;
+        transform: scale(1.01); /* Slightly enlarge the brand */
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    }
 
 {% endblock %}
 
@@ -18,7 +22,7 @@ poznajmypolske.pl
 
 
 <br>
-<div class="row" style="border: 3px solid #000; padding: 20px;">
+<div class="row">
     <div class="col">
         <div class="card">
             <div class="card-body">
