--- a/polishness/templates/polishness/monument_single_ai.html
+++ b/polishness/templates/polishness/monument_single_ai.html
@@ -11,6 +11,11 @@ poznajmypolske.pl
     background-color: yellow;
 }
 
+    .card:hover {
+        border-color: #007bff;
+        transform: scale(1.01); /* Slightly enlarge the brand */
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    }
 
 {% endblock %}
 
@@ -19,7 +24,7 @@ poznajmypolske.pl
 
 <br>
 <small>Odpowiedź z openai.com:</small>
-<div class="row" style="border: 3px solid #000; padding: 20px;">
+<div class="row"">
     <div class="col">
         <div class="card">
             <div class="card-body">
