adds commented search input functionality

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -169,10 +169,14 @@
       </div>
 
 
-      <div class="navbar-nav ml-auto">
+     <div class="navbar-nav ml-auto">
+     <!--    <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Szukaj">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
+        </form>
+     -->
           <strong><a class="navbar-brand m-3 p-2" href="{% url 'polishness:contact' %}">Kontakt</a></strong>
       </div>
-
   </nav>
 
 
