adds styling changes

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -42,17 +42,20 @@
         nav .navbar-brand {
             color: #ffffff; /* Default text color */
             padding: 5px 10px; /* Add some padding for hover background */
-            text-decoration: underline;
+            /* text-decoration: underline;
             position: relative;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
             transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+            border: 1px solid #d6e9c6; /* Border in a darker shade of green */
+            border-radius: 8px; /* Dodanie zaokrąglenia podczas hover */
         }
 
         nav .navbar-brand:hover {
             color: #ff5733; /* Change text color */
             background-color: rgba(255, 255, 255, 0.3); /* Add background on hover */
-            transform: scale(1.2); /* Slightly enlarge the brand */
+            transform: scale(1.1); /* Slightly enlarge the brand */
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow */
+            border: 1px solid #d6e9c6; /* Border in a darker shade of green */
             border-radius: 8px; /* Dodanie zaokrąglenia podczas hover */
         }
 
